retirando o uso do .collect(Collectors)