@@ -2,7 +2,6 @@ package funcional_interface;
 
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class SupplierExample {
@@ -12,8 +11,7 @@ public class SupplierExample {
 
         // Usar o Supplier para obter uma lista com 5 saudações
         List<String> listaSaudacoes = Stream.generate(saudacao)
-            .limit(5)
-            .collect(Collectors.toList());
+            .limit(5).toList();
 
         // imprime as saudações geradas
         listaSaudacoes.forEach(lis -> System.out.println(lis));
